# pyg-arturo

./: README.md  arturo.py  pyproject.toml  test.art
